fixed fullcalendar height on mobile screen

--- a/src/app/pages/extra/calendar/calendar.style.scss
+++ b/src/app/pages/extra/calendar/calendar.style.scss
@@ -59,8 +59,3 @@ a.fc-event{
     margin-top: -100px;
   }
 }
-
-div.fc-scroller.fc-day-grid-container {
-  overflow: unset !important;
-  height: auto !important;
-}
